need to start tmate before the deploy step separately

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -57,12 +57,6 @@ jobs:
         submodules: true
         fetch-depth: 0
         
-    #- name: Setup tmate session
-    #  if: matrix.os == 'windows-2019'
-    #  uses: mxschmitt/action-tmate@v3
-    #  with:
-    #    detached: true
-        
     - name: (Windows 64) Setup MSYS2
       if: matrix.buildname == 'windows64'
       uses: msys2/setup-msys2@v2
@@ -93,7 +87,11 @@ jobs:
       if: matrix.os == 'windows-2019'
       shell: msys2 {0}
       run: $GITHUB_WORKSPACE/CI/package-mudlet-for-windows.sh
-        
+      
+    - name: Setup tmate session
+      if: matrix.os == 'windows-2019'
+      uses: mxschmitt/action-tmate@v3
+
     - name: (Windows) Deploy
       if: matrix.os == 'windows-2019'
       shell: msys2 {0}
@@ -108,7 +106,6 @@ jobs:
         GITHUB_PULL_REQUEST_NUMBER: ${{ github.event.pull_request.number }}
         GITHUB_PULL_REQUEST_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
       run: $GITHUB_WORKSPACE/CI/deploy-mudlet-for-windows.sh
-      uses: mxschmitt/action-tmate@v3
       
     - name: (Linux/macOS) Install Qt
       uses: jurplel/install-qt-action@v3
