--- a/.github/workflows/build-mudlet-win.yml
+++ b/.github/workflows/build-mudlet-win.yml
@@ -46,7 +46,18 @@ jobs:
     - name: (Windows) Build Environment Setup
       shell: msys2 {0}
       run: $GITHUB_WORKSPACE/CI/setup-windows-sdk.sh
-      
+
+    - name: restore ccache
+      uses: actions/cache@v4
+      with:
+        path: ${{runner.workspace}}/ccache
+        key: ccache-${{matrix.os}}-${{matrix.buildname}}-${{ github.sha }}
+        restore-keys: ccache-${{matrix.os}}-${{matrix.buildname}}
+        save-always: true
+
+    - name: check ccache stats prior to build
+      run: ccache --zero-stats --show-stats
+        
     - name: (Windows) Build
       shell: msys2 {0}
       env:
@@ -54,7 +65,10 @@ jobs:
         GITHUB_PULL_REQUEST_NUMBER: ${{ github.event.pull_request.number }}
         GITHUB_PULL_REQUEST_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
       run: $GITHUB_WORKSPACE/CI/build-mudlet-for-windows.sh
-        
+
+    - name: check ccache stats post build
+      run: ccache --show-stats
+      
     - name: (Windows) Package
       shell: msys2 {0}
       run: $GITHUB_WORKSPACE/CI/package-mudlet-for-windows.sh
