--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,17 +34,23 @@ environment:
   matrix:
   - MSYSTEM: "MINGW32"
     QT_MAJOR_VERSION: "5"
+    BUILD_CONFIG: "debug"
   - MSYSTEM: "MINGW64"
     QT_MAJOR_VERSION: "5"
+    BUILD_CONFIG: "debug"
   - MSYSTEM: "MINGW64"
     QT_MAJOR_VERSION: "6"
+    BUILD_CONFIG: "debug"
+  - MSYSTEM: "MINGW32"
+    QT_MAJOR_VERSION: "5"
+    BUILD_CONFIG: "release"
+  - MSYSTEM: "MINGW64"
+    QT_MAJOR_VERSION: "5"
+    BUILD_CONFIG: "release"
+  - MSYSTEM: "MINGW64"
+    QT_MAJOR_VERSION: "6"
+    BUILD_CONFIG: "release"
 
-# We only want debug builds for PRs and Test builds and possibly PTBs
-# We want release builds for Release and PTB builds
-# It seems these string might be case-sensitive
-configuration:
-- Release
-- Debug
 
 # The build cache is restored before the install stage.
 
