--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -54,9 +54,9 @@ environment:
 # Temporarily abort the whole build if one job fails, but don't worry about the
 # qt6 case:
 matrix:
-  - fast_finish: true
-  - allow_failures:
-    - QT_MAJOR_VERSION: "6"
+  fast_finish: true
+  allow_failures:
+  - QT_MAJOR_VERSION: "6"
 
 # The build cache is restored before the install stage.
 
