Debug: do just one build that worked last time to debug packaging [skip actions]
Signed-off-by: Stephen Lyons <slysven@virginmedia.com>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,21 +35,21 @@ environment:
   - MSYSTEM: "MINGW32"
     QT_MAJOR_VERSION: "5"
     BUILD_CONFIG: "debug"
-  - MSYSTEM: "MINGW64"
-    QT_MAJOR_VERSION: "5"
-    BUILD_CONFIG: "debug"
-  - MSYSTEM: "MINGW64"
-    QT_MAJOR_VERSION: "6"
-    BUILD_CONFIG: "debug"
-  - MSYSTEM: "MINGW32"
-    QT_MAJOR_VERSION: "5"
-    BUILD_CONFIG: "release"
-  - MSYSTEM: "MINGW64"
-    QT_MAJOR_VERSION: "5"
-    BUILD_CONFIG: "release"
-  - MSYSTEM: "MINGW64"
-    QT_MAJOR_VERSION: "6"
-    BUILD_CONFIG: "release"
+#  - MSYSTEM: "MINGW64"
+#    QT_MAJOR_VERSION: "5"
+#    BUILD_CONFIG: "debug"
+#  - MSYSTEM: "MINGW64"
+#    QT_MAJOR_VERSION: "6"
+#    BUILD_CONFIG: "debug"
+#  - MSYSTEM: "MINGW32"
+#    QT_MAJOR_VERSION: "5"
+#    BUILD_CONFIG: "release"
+#  - MSYSTEM: "MINGW64"
+#    QT_MAJOR_VERSION: "5"
+#    BUILD_CONFIG: "release"
+#  - MSYSTEM: "MINGW64"
+#    QT_MAJOR_VERSION: "6"
+#    BUILD_CONFIG: "release"
 
 # Temporarily abort the whole build if one job fails, but don't worry about the
 # qt6 case:
