--- a/.github/workflows/build-mudlet-win.yml
+++ b/.github/workflows/build-mudlet-win.yml
@@ -28,21 +28,27 @@ jobs:
       with:
         submodules: true
         fetch-depth: 0
-        
+
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      with:
+        detached: true
+        limit-access-to-actor: true
+
     - name: (Windows 64) Setup MSYS2
       if: matrix.buildname == 'windows64'
       uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
         update: true
-        
+
     - name: (Windows 32) Setup MSYS2
       if: matrix.buildname == 'windows32'
       uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW32
         update: true
-          
+
     - name: (Windows) Build Environment Setup
       shell: msys2 {0}
       env:
@@ -62,7 +68,7 @@ jobs:
     - name: check ccache stats prior to build
       shell: msys2 {0}
       run: ccache --zero-stats --show-stats
-        
+
     - name: (Windows) Build
       shell: msys2 {0}
       env:
@@ -75,7 +81,7 @@ jobs:
     - name: check ccache stats post build
       shell: msys2 {0}
       run: ccache --show-stats
-      
+
     - name: (Windows) Package
       shell: msys2 {0}
       run: $GITHUB_WORKSPACE/CI/package-mudlet-for-windows.sh
@@ -93,17 +99,17 @@ jobs:
         GITHUB_PULL_REQUEST_NUMBER: ${{ github.event.pull_request.number }}
         GITHUB_PULL_REQUEST_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
       run: $GITHUB_WORKSPACE/CI/deploy-mudlet-for-windows.sh
- 
+
     - name: Upload packaged Mudlet
       uses: actions/upload-artifact@v4
       if: env.UPLOAD_FILENAME
       with:
         name: ${{env.UPLOAD_FILENAME}}
         path: ${{env.FOLDER_TO_UPLOAD}}
-        
+
     #- name: Setup tmate session
     #  uses: mxschmitt/action-tmate@v3
-      
+
     - name: Submit to make.mudlet.org
       if: env.UPLOAD_FILENAME
       run: |
