--- a/.github/workflows/build-mudlet-win.yml
+++ b/.github/workflows/build-mudlet-win.yml
@@ -106,5 +106,8 @@ jobs:
     - name: Register Release
       shell: msys2 {0}
       if: env.PUBLIC_TEST_BUILD == 'true'
+      env:
+        ARCH: ${{env.ARCH}}
+        VERSION_STRING: ${{env.VERSION_STRING}}
       run: $GITHUB_WORKSPACE/CI/register-windows-release.sh
 
