add PATH and BUILD_COMMIT export to register script

--- a/.github/workflows/build-mudlet-win.yml
+++ b/.github/workflows/build-mudlet-win.yml
@@ -109,5 +109,7 @@ jobs:
       env:
         ARCH: ${{env.ARCH}}
         VERSION_STRING: ${{env.VERSION_STRING}}
+        BUILD_COMMIT: ${{env.BUILD_COMMIT}}
+        PATH: ${{env.PATH}}
       run: $GITHUB_WORKSPACE/CI/register-windows-release.sh
 
