--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -5,6 +5,11 @@ on:
     tags: [Mudlet-*]
   pull_request:
   workflow_dispatch:
+    inputs:
+      scheduled:
+        description: 'Imitate a scheduled build'
+        required: false
+        default: 'false'
   schedule:
     - cron: '0 2 * * *'
 
@@ -51,7 +56,7 @@ jobs:
       with:
         submodules: true
         fetch-depth: 0
-      
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v4
       with:
@@ -327,7 +332,7 @@ jobs:
       with:
         name: ${{env.UPLOAD_FILENAME}}
         path: ${{env.FOLDER_TO_UPLOAD}}
-      
+
     - name: Submit to make.mudlet.org
       if: env.UPLOAD_FILENAME
       run: curl -X POST "https://make.mudlet.org/snapshots/gha_queue.php?artifact_name=${{env.UPLOAD_FILENAME}}&unzip=1"
