--- a/.github/workflows/qodana-analysys.yml
+++ b/.github/workflows/qodana-analysys.yml
@@ -21,15 +21,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0  # a full history is required for pull request analysis
       - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2024.1
+        uses: JetBrains/qodana-action@main
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-
-      - name: Qodana Scan
-        uses: JetBrains/qodana-action@v2024.1
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}       
         with:
           pr-mode: false
           args: --apply-fixes
           push-fixes: pull-request
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
