--- a/.github/workflows/qodana-analysys.yml
+++ b/.github/workflows/qodana-analysys.yml
@@ -112,7 +112,7 @@ jobs:
           cmakeListsTxtPath: '${{github.workspace}}/CMakeLists.txt'
           useVcpkgToolchainFile: true
           # has to be the github workspace, not the runner workspace, for the docker-based clang-tidy-review
-          buildDirectory: '${{github.workspace}}/b/ninja'
+          buildDirectory: '${{github.workspace}}/build'
           cmakeAppendedArgs: >-
             -DCMAKE_GLOBAL_AUTOGEN_TARGET=ON
             -G Ninja
