--- a/.github/workflows/qodana-analysys.yml
+++ b/.github/workflows/qodana-analysys.yml
@@ -129,5 +129,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}       
         with:
           pr-mode: false
-          args: --apply-fixes
+          # args: --apply-fixes
           push-fixes: pull-request
