Another go at disabling fixit PRs

--- a/.github/workflows/qodana-analysys.yml
+++ b/.github/workflows/qodana-analysys.yml
@@ -130,4 +130,4 @@ jobs:
         with:
           pr-mode: false
           # args: --apply-fixes
-          push-fixes: pull-request
+          # push-fixes: pull-request
