specify proper shell for register script

--- a/.github/workflows/build-mudlet-win.yml
+++ b/.github/workflows/build-mudlet-win.yml
@@ -109,6 +109,7 @@ jobs:
       shell: pwsh
 
     - name: Register Release
+      shell: msys2 {0}
       if: env.RELEASE_TAG == 'release' || env.RELEASE_TAG == 'public-test-build'
       env:
         ARCH: {{{env.ARCH}}
