--- a/.github/workflows/build-mudlet-win.yml
+++ b/.github/workflows/build-mudlet-win.yml
@@ -112,7 +112,7 @@ jobs:
       shell: msys2 {0}
       if: env.RELEASE_TAG == 'release' || env.RELEASE_TAG == 'public-test-build'
       env:
-        ARCH: {{{env.ARCH}}
+        ARCH: ${{env.ARCH}}
         VERSION_STRING: ${{env.VERSION_STRING}}
         BUILD_COMMIT: ${{env.BUILD_COMMIT}}
       run: $GITHUB_WORKSPACE/CI/register-windows-release.sh ${{ env.RELEASE_TAG }}
