--- a/.github/workflows/build-mudlet-win.yml
+++ b/.github/workflows/build-mudlet-win.yml
@@ -110,10 +110,10 @@ jobs:
 
     - name: Register Release
       shell: msys2 {0}
-      if: env.PUBLIC_TEST_BUILD == 'true'
+      if: env.RELEASE_TAG == 'release' || env.RELEASE_TAG == 'public-test-build'
       env:
         ARCH: ${{env.ARCH}}
         VERSION_STRING: ${{env.VERSION_STRING}}
         BUILD_COMMIT: ${{env.BUILD_COMMIT}}
-        PATH: ${{env.PATH}}
-      run: $GITHUB_WORKSPACE/CI/register-windows-release.sh
+      run: $GITHUB_WORKSPACE/CI/register-windows-release.sh ${{ env.RELEASE_TAG }}
+
