--- a/.github/workflows/build-mudlet-win.yml
+++ b/.github/workflows/build-mudlet-win.yml
@@ -83,6 +83,8 @@ jobs:
         DBLSQD_USER: ${{secrets.DBLSQD_USER}}
         DBLSQD_PASS: ${{secrets.DBLSQD_PASS}}
         DEPLOY_KEY_PASS: ${{secrets.DEPLOY_KEY_PASS}}
+        DEPLOY_SSH_KEY: ${{secrets.DEPLOY_SSH_KEY}}
+        DEPLOY_PATH: ${{secrets.DEPLOY_PATH}}
         WIN_SIGNING_PASS: ${{secrets.WIN_SIGNING_PASS}}
         GITHUB_REPO_NAME: ${{ github.repository }}
         GITHUB_REPO_TAG: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
@@ -110,10 +112,9 @@ jobs:
 
     - name: Register Release
       shell: msys2 {0}
-      if: env.RELEASE_TAG == 'release' || env.RELEASE_TAG == 'public-test-build'
+      if: env.PUBLIC_TEST_BUILD == 'true'
       env:
         ARCH: ${{env.ARCH}}
         VERSION_STRING: ${{env.VERSION_STRING}}
         BUILD_COMMIT: ${{env.BUILD_COMMIT}}
-      run: $GITHUB_WORKSPACE/CI/register-windows-release.sh ${{ env.RELEASE_TAG }}
-
+      run: $GITHUB_WORKSPACE/CI/register-windows-release.sh
